adds locations and amenities filters

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -3,10 +3,11 @@
     margin: 30px auto;
     background-color: #FFFFFF;
     height: 70px;
-    justify-self: center;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
     position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .filters button {
