--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -7,12 +7,12 @@
 
 }
 
-.places .article h1 {
+article h1 {
     align-self: flex-start;
     font-size: 30px;
 }
 
-.places .article {
+article {
     width: 390px;
     padding: 20px;
     margin: 20px;
@@ -20,7 +20,7 @@
     border-radius: 4px;
 }
 
-.places .article h2 {
+article h2 {
     font-size: 30px;
     text-align: center;
 }
